Fix alignment of health and essence text

--- a/public_html/styles.css
+++ b/public_html/styles.css
@@ -237,9 +237,18 @@ img {
 
 .hud-row-container p {
     margin-bottom: 4px;
-    font-family: "Heavitas";
-    -webkit-text-stroke: 1px black;
-    font-size: 14px;
+    font-family: "Matrix-Mono";
+    color: #eee;
+    font-size: 8px;
+    text-shadow: 0px 0px 8px black;
+}
+
+#health-text {
+    margin-left: -12px;
+}
+
+#essence-text {
+    margin-right: -14px;
 }
 
 #essence-jar {
